[gd_scene load_steps=4 format=2]

[ext_resource path="res://food.tscn" type="PackedScene" id=1]
[ext_resource path="res://head.tscn" type="PackedScene" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="Head" parent="." instance=ExtResource( 2 )]
monitoring = false

[node name="Food" parent="." instance=ExtResource( 1 )]

[node name="GameTimer" type="Timer" parent="."]
wait_time = 0.125
autostart = true

[connection signal="ate" from="Head" to="." method="_on_Head_ate"]
[connection signal="died" from="Head" to="." method="game_over"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
